# ropy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_ZH.md  TODO.md  build.rs  cliff.toml  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: Base.instructions.md  Project.instructions.md
.github/workflows/: release.yml
assets/locales/: en.toml  zh-CN.toml
doc/: Architecture.md  Concurrency Analysis.md  Concurrency.md  Multi-Language.md  README_ZH.md  TODO.md  架构设计.md
script/: build_dmg.sh  precheck.sh  update_version.sh
src/: main.rs  monitor.rs  single_instance.rs
src/clipboard/: listener.rs  mod.rs  utils.rs  writer.rs
src/config/: autostart.rs  mod.rs  settings.rs
src/gui/: app.rs  board.rs  gpui.rs  hotkey.rs  mod.rs  tray.rs  utils.rs  x11.rs
src/gui/board/: about.rs  actions.rs  mod.rs  preview.rs  render.rs  settings.rs
src/i18n/: mod.rs
src/repository/: errors.rs  mod.rs  models.rs  repo.rs
