[package]
name = "ropy"
version = "0.1.0"
edition = "2024"

[dependencies]
clipboard-rs = "0.3.1"
gpui = "0.2.2"
sysinfo = "0.37.2"
global-hotkey = "0.7.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

[dev-dependencies]
tempfile = "3.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }

[package.metadata.bundle]
name = "Ropy"
identifier = "com.ropy.app"
version = "0.1.0"
copyright = "Copyright 2025 Ropy Team"
category = "Productivity"
short_description = "A clipboard manager"
long_description = "A clipboard manager built with Rust and GPUI."
