[package]
name = "ropy"
version = "0.2.0-alpha"
edition = "2024"
description = "A clipboard manager built with Rust and GPUI."
repository = "https://github.com/StudentWeis/ropy"
license = "MIT"

[dependencies]
clipboard-rs = "0.3.1"
gpui = "0.2.2"
gpui-component = "0.5.0"
sysinfo = "0.37.2"
global-hotkey = "0.7"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
thiserror = "2.0"
config = "0.15"
toml = "0.9.8"
image = "0.25"
tray-icon = "0.21"
dark-light = "2.0"
auto-launch = "0.5"
regex = "1.12.2"
raw-window-handle = "0.6"
async-channel = "2.5.0"
rust-embed = "8.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[dev-dependencies]
tempfile = "3.20"

[build-dependencies]
winres = "0.1"
image = "0.25"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.bundle]
name = "Ropy"
identifier = "com.ropy.app"
version = "0.2.0-alpha"
copyright = "Copyright 2025 Ropy Team"
category = "Productivity"
short_description = "A clipboard manager"
long_description = "A clipboard manager built with Rust and GPUI."
codesign_identity = "adhoc"
